--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "swagger": "^0.0.1",
